Add local development placeholder

--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -590,6 +590,12 @@ graph LR;
 
 Guide each client team to follow the implementation steps presented in the [incremental adoption path](#incremental-adoption-path).
 
+## Local development
+
+To-do
+
+Also include information on how you can use the Explorer if your PQL is locked down.
+
 ## Safelisting as part of your security architecture
 
 Safelisting empowers you to reduce the surface of your supergraph by restricting the shape of incoming operations. It's one key component of GraphOS' security features and complements other security features such as [JWT authentication](/router/configuration/authn-jwt/) and [operation limits](/router/configuration/operation-limits).
