--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -284,7 +284,7 @@ After client teams publish operations to a graph's PQL, you can configure router
 
 3. Deploy your updated router instances to begin using your PQL.
 
-### Router security levels
+#### Router security levels
 
 As you may recall, the Apollo Router supports the following [security levels](#security-levels), in increasing order of restrictiveness:
 
@@ -309,9 +309,9 @@ To use persisted queries _only_ to reduce network bandwidth and latency (_not_ f
 ```yaml title="router.yaml"
 preview_persisted_queries:
   enabled: true
-apq:
-  enabled: false # APQ must be disabled
 ```
+
+> **Note:** You can use the performance-only security level with [automatic persisted queries](/router/configuration/in-memory-caching#caching-automatic-persisted-queries-apq) enabled.
 
 This enables your clients to execute operations by providing their PQL-specified ID instead of the full operation string.
 Your router also continues to accept full operation strings, even for operations that _don't_ appear in its PQL.
@@ -328,9 +328,8 @@ To enable logging for unregistered queries, enable the `log_unknown` property:
 preview_persisted_queries:
   enabled: true
   log_unknown: true
-apq:
-  enabled: false # APQ must be disabled
 ```
+> **Note:** You can use audit mode with [automatic persisted queries](/router/configuration/in-memory-caching#caching-automatic-persisted-queries-apq) enabled.
 
 Unregistered operations appear in your [router's logs](./logging).
 
@@ -339,6 +338,8 @@ Unregistered operations appear in your [router's logs](./logging).
 > Before applying this configuration, ensure your PQL contains _all_ of the GraphQL operations that _all active versions_ of your clients execute. If you enable safelisting _without_ ensuring this, your router will reject any unpublished client operations.
 
 With the following configuration, your router allows _only_ GraphQL operations that are present in its PQL while rejecting all other operations:
+
+> **Note:** To enable safelisting, you _must_ disable [automatic persisted queries](/router/configuration/in-memory-caching#caching-automatic-persisted-queries-apq).
 
 ```yaml title="router.yaml"
 preview_persisted_queries:
@@ -358,6 +359,8 @@ To execute an operation, clients can provide its full operation string _or_ its 
 > **Do not start with this configuration:** It requires _all_ your clients execute operations by providing their PQL-specified ID. If any clients still provide full operation strings, those clients will break.
 
 With the following configuration, your router allows _only_ GraphQL operations that are present in its PQL, _and_ it requires clients to provide PQL-specified IDs instead of full operation strings:
+
+> **Note:** To enable safelisting, you _must_ disable [automatic persisted queries](/router/configuration/in-memory-caching#caching-automatic-persisted-queries-apq).
 
 ```yaml title="router.yaml"
 preview_persisted_queries:
@@ -390,6 +393,12 @@ Once your router's logs are clear of unexpected operations, you can configure yo
 Once you've confirmed all client apps use IDs, you can move to the most restrictive [security level](#router-security-levels): safelisting with IDs only.
 This security level enforces the performance benefit of using operation IDs rather than full query strings. If you're content with the safelisting aspect of persisted queries with optional performance benefits, you don't need to enable it.
 
+### Local development
+
+To-do
+
+Also include information on how you can use the Explorer if your PQL is locked down.
+
 ### Coordinate with client teams
 
 Once you've followed the implementation steps for one client, you can coordinate across all your client teams:
@@ -418,17 +427,6 @@ graph LR;
 
 Guide each client team to follow the implementation steps presented in the [incremental adoption path](#incremental-adoption-path).
 
-## Local development
-
-To-do
-
-Also include information on how you can use the Explorer if your PQL is locked down.
-
-## Safelisting as part of your security architecture
-
-Safelisting empowers you to reduce the surface of your supergraph by restricting the shape of incoming operations. It's one key component of GraphOS' security features and complements other security features such as [JWT authentication](/router/configuration/authn-jwt/) and [operation limits](/router/configuration/operation-limits).
-
-Since safelisting protects your graph by limiting its surface to _known and trusted_ operations, **it's best suited for supergraphs that primarily serve first-party apps**. If your graph is open to third-party developers, it's better to rely on other security features such as [CORS configuration](/router/configuration/cors/) and [CSRF prevention](/router/configuration/csrf).
 
 ## Manifest format
 
