--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -7,7 +7,7 @@ This reference lists the rules that you can enforce with [GraphOS schema linting
 
 Rules are categorized by the part(s) of your schema that they correspond to.
 
-## Schema
+### Schema
 
 #### `DOES_NOT_PARSE`
 
@@ -35,7 +35,7 @@ query GetUsers { # Don't define operations in a schema document
 #highlight-end
 ```
 
-## All fields
+### All fields
 
 #### `FIELD_NAMES_SHOULD_BE_CAMEL_CASE`
 
@@ -91,7 +91,7 @@ type Query {
 }
 ```
 
-## All types
+### All types
 
 These rules apply to _all_ types that appear in a GraphQL schema, including:
 
@@ -169,7 +169,7 @@ type Book { # highlight-line
 }
 ```
 
-## Objects
+### Objects
 
 #### `OBJECT_PREFIX`
 
@@ -213,7 +213,7 @@ type Book { # highlight-line
 }
 ```
 
-## Interfaces
+### Interfaces
 
 #### `INTERFACE_PREFIX`
 
@@ -261,7 +261,7 @@ interface Book { # highlight-line
 }
 ```
 
-## Inputs & arguments
+### Inputs & arguments
 
 #### `INPUT_ARGUMENT_NAMES_SHOULD_BE_CAMEL_CASE`
 
@@ -311,7 +311,7 @@ input BlogPostDetailsInput { #highlight-line
 }
 ```
 
-## Enums
+### Enums
 
 #### `ENUM_VALUES_SHOULD_BE_SCREAMING_SNAKE_CASE`
 
@@ -453,7 +453,7 @@ type Query {
 }
 ```
 
-## Directives
+### Directives
 
 #### `DIRECTIVE_NAMES_SHOULD_BE_CAMEL_CASE`
 
@@ -526,3 +526,169 @@ type Product {
 #### `TAG_DIRECTIVE_USES_UNKNOWN_NAME`
 
 The `@tag` directive should always use an approved value for its `name` argument. You specify approved values in [GraphOS Studio](./schema-linter/#configuring-the-linter).
+
+## Composition rules
+
+When you successfully [compose](/federation/federated-types/composition) the schemas provided by your [subgraphs](/federation/building-supergraphs/subgraphs-overview/) into a supergraph schema, the composition process might output **hints** that provide additional information about the result.
+
+### Inconsistent elements
+
+#### `INCONSISTENT_ARGUMENT_PRESENCE`
+
+Indicates that an optional argument (of a field or directive definition) is not present in all subgraphs and will not be part of the supergraph.
+
+<hr/>
+
+#### `INCONSISTENT_BUT_COMPATIBLE_ARGUMENT_TYPE`
+
+Indicates that an argument type (of a field/input field/directive definition) does not have the exact same type in all subgraphs, but that the types are "compatible" (two types are compatible if one is a non-nullable version of the other, a list version, a subtype, or a combination of the former).
+
+<hr/>
+
+#### `INCONSISTENT_BUT_COMPATIBLE_FIELD_TYPE`
+
+Indicates that a field does not have the exact same types in all subgraphs, but that the types are "compatible" (2 types are compatible if one is a non-nullable version of the other, a list version, a subtype, or a combination of the former).
+
+<hr/>
+
+#### `INCONSISTENT_DEFAULT_VALUE_PRESENCE`
+
+Indicates that an argument definition (of a field/input field/directive definition) has a default value in only some of the subgraphs that define the argument.
+
+<hr/>
+
+#### `INCONSISTENT_DESCRIPTION`
+
+Indicates that an element has a description in more than one subgraph, and the descriptions are not equal.
+
+<hr/>
+
+#### `INCONSISTENT_ENTITY`
+
+Indicates that an object is declared as an entity (has a `@key`) in only some of the subgraphs in which the object is defined.
+
+<hr/>
+
+#### `INCONSISTENT_ENUM_VALUE_FOR_INPUT_ENUM`
+
+Indicates that a value of an enum type definition (that is only used as an Input type) has not been merged into the supergraph because it is defined in only a subset of the subgraphs that declare the enum
+
+<hr/>
+
+#### `INCONSISTENT_ENUM_VALUE_FOR_OUTPUT_ENUM`
+
+Indicates that a value of an enum type definition (that is only used as an Output type, or is unused) has been merged in the supergraph but is defined in only a subset of the subgraphs that declare the enum
+
+<hr/>
+
+#### `INCONSISTENT_EXECUTABLE_DIRECTIVE_LOCATIONS`
+
+Indicates that an executiable directive definition is declared with inconsistent locations across subgraphs (and will use the intersection of all locations in the supergraph).
+
+<hr/>
+
+#### `INCONSISTENT_EXECUTABLE_DIRECTIVE_PRESENCE`
+
+Indicates that an executable directive definition is declared in only some of the subgraphs.
+
+<hr/>
+
+#### `INCONSISTENT_EXECUTABLE_DIRECTIVE_REPEATABLE`
+
+Indicates that an executiable directive definition is declared with inconsistent locations across subgraphs (and will use the intersection of all locations in the supergraph).
+
+<hr/>
+
+#### `INCONSISTENT_INPUT_OBJECT_FIELD`
+
+Indicates that a field of an input object type definition is only defined in a subset of the subgraphs that declare the input object.
+
+<hr/>
+
+#### `INCONSISTENT_INTERFACE_VALUE_TYPE_FIELD`
+
+Indicates that a field of an interface "value type" (has no `@key` in any subgraph) is not defined in all the subgraphs that declare the type.
+
+<hr/>
+
+#### `INCONSISTENT_NON_REPEATABLE_DIRECTIVE_ARGUMENTS`
+
+A non-repeatable directive is applied to a schema element in different subgraphs but with arguments that are different.
+
+<hr/>
+
+#### `INCONSISTENT_OBJECT_VALUE_TYPE_FIELD`
+
+Indicates that a field of an object "value type" (has no `@key` in any subgraph) is not defined in all the subgraphs that declare the type.
+
+<hr/>
+
+#### `INCONSISTENT_RUNTIME_TYPES_FOR_SHAREABLE_RETURN`
+
+Indicates that a @shareable field returns different sets of runtime types in the different subgraphs in which it is defined.
+
+<hr/>
+
+#### `INCONSISTENT_TYPE_SYSTEM_DIRECTIVE_LOCATIONS`
+
+Indicates that an executable directive definition is marked repeatable in only a subset of the subgraphs (and will not be repeatable in the supergraph).
+
+<hr/>
+
+#### `INCONSISTENT_TYPE_SYSTEM_DIRECTIVE_REPEATABLE`
+
+Indicates that a type system directive definition is marked repeatable in only a subset of the subgraphs that declare the directive (and will be repeatable in the supergraph).
+
+<hr/>
+
+#### `INCONSISTENT_UNION_MEMBER`
+
+Indicates that a member of a union type definition is only defined in a subset of the subgraphs that declare the union.
+
+### Overridden and unused elements
+
+#### `OVERRIDDEN_FIELD_CAN_BE_REMOVED`
+
+Field has been overridden by another subgraph. Consider removing.
+
+<hr/>
+
+#### `OVERRIDE_DIRECTIVE_CAN_BE_REMOVED`
+
+Field with @override directive no longer exists in source subgraph, the directive can be safely removed
+
+<hr/>
+
+#### `UNUSED_ENUM_TYPE`
+
+Indicates that an enum type is defined in some subgraphs but is unused (no field/argument references it). All the values from subgraphs defining that enum will be included in the supergraph.
+
+### Directives
+
+#### `DIRECTIVE_COMPOSITION`
+
+Indicates that an issue was detected when composing custom directives.
+
+<hr/>
+
+#### `DIRECTIVE_COMPOSITION_WARN`
+
+Indicates that an issue was detected when composing custom directives.
+
+<hr/>
+
+#### `MERGED_NON_REPEATABLE_DIRECTIVE_ARGUMENTS`
+
+A non-repeatable directive has been applied to a schema element in different subgraphs with different arguments and the arguments values were merged using the directive configured strategies.
+
+<hr/>
+
+#### `NO_EXECUTABLE_DIRECTIVE_INTERSECTION`
+
+Indicates that, for an executable directive definition, no location for it appears in all subgraphs.
+
+#### `FROM_SUBGRAPH_DOES_NOT_EXIST`
+
+Source subgraph specified by @override directive does not exist
+
+
